# zkp-dataset-ledger

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_IMPLEMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_BREAKTHROUGH.md  AUTONOMOUS_SDLC_COMPLETION.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.security  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION-ROADMAP.md  Makefile  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_SUMMARY.md  PROJECT_CHARTER.md  PUBLISHING.md  README.md  SDLC_ANALYSIS.md  SDLC_IMPLEMENTATION_COMPLETE.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SLSA.md  WORKFLOW_SETUP.md  (+43 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github-workflows-to-create/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_report.yml
.github/workflows/: release.yml  security.yml
benches/: proof_generation.rs  verification.rs
config/: production.toml
default_ledger/: ledger.json  ledger.json.backup  ledger.json.backup.20250814_141620  ledger.json.backup.20250820_023003  ledger.json.backup.20250820_035904  ledger.json.backup.20250820_040341  ledger.json.backup.20250820_040702  ledger.json.backup.20250821_221620  ledger.json.backup.20250821_221858  ledger.json.backup.20250821_221906  ledger.json.backup.20250821_222109  ledger.json.backup.20250821_222119  ledger.json.backup.20250821_222152  ledger.json.backup.20250824_142548  ledger.json.backup.20250827_154954
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml
deploy/monitoring/: prometheus.yml
docker/: init.sql  sbom-config.toml
docker/alertmanager/: alertmanager.yml
docker/prometheus/: prometheus.yml
docs/: BUILD.md  DEVELOPMENT.md  ROADMAP.md  WORKFLOWS.md
docs/adr/: 000-template.md  001-use-groth16-for-zk-proofs.md  README.md
docs/deployment/: README.md
docs/guides/: README.md
docs/monitoring/: README.md  alerts.yml  grafana-dashboard.json  prometheus.yml
docs/runbooks/: incident-response.md
docs/testing/: README.md
docs/workflows/: README.md  SETUP_REQUIRED.md
examples/: README.md  comprehensive_demo.rs  simple_notarize.rs
examples/basic/: Cargo.toml  main.rs
examples/github-actions/: ml-pipeline.yml
examples/kubernetes/: zkp-ledger-deployment.yaml
examples/mlflow/: integration.py  requirements.txt
examples/python-bindings/: demo.py
examples/terraform/: main.tf
k8s/: deployment.yaml  namespace.yaml
proptest-regressions/: .gitkeep
scripts/: collect-metrics.sh  deploy.sh  run-tests.sh
src/: adaptive_optimization.rs  advanced_ledger.rs  auto_scaling.rs  autonomous_orchestration.rs  cache_system.rs  circuits.rs  circuits_complex.rs  comprehensive_logging.rs  concurrent_engine.rs  config.rs  config_manager.rs  dataset.rs  deployment_manager.rs  distributed.rs  distributed_consensus.rs  distributed_consensus_backup.rs  distributed_proof_generation.rs  enhanced_security.rs  enhanced_validation.rs  error.rs  error_complex.rs  error_handling.rs  high_performance.rs  intelligent_caching.rs  ledger.rs  lib.rs  lib_complex.rs  lib_simple.rs  monitoring.rs  monitoring_enhanced.rs  monitoring_system.rs  performance.rs  performance_enhanced.rs  performance_optimized.rs  performance_profiler.rs  production_orchestrator.rs  proof.rs  proof_simple.rs  quantum_performance.rs  recovery.rs  (+8 more)
src/circuits/: mod.rs  zkp_core.rs
src/crypto/: hash.rs  merkle.rs  mod.rs
src/mpc/: federated_proofs.rs  mod.rs
src/research/: advanced_circuits.rs  benchmarks.rs  breakthrough_algorithms.rs  differential_privacy.rs  federated_proofs.rs  mod.rs  mod_research.rs  optimization.rs  streaming_zkp.rs
src/streaming/: mod.rs  zkp_streaming.rs
tests/: README.md  integration_tests.rs  test_config.toml
tests/e2e/: cli_workflows.rs
tests/fixtures/: mod.rs
tests/integration/: cli_integration_tests.rs  cli_tests.rs  complete_workflow_test.rs  end_to_end_tests.rs  end_to_end_workflow.rs  mod.rs  performance_tests.rs  (+1 more)
workflows-to-setup/: ci.yml
(+14 files in other folders)
