```toml
[package]
name = "zkp-dataset-ledger"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Schmidt <daniel@terragon.ai>"]
description = "A zero-knowledge-proof ledger that notarizes every dataset version, transformation, and train/eval split"
repository = "https://github.com/danieleschmidt/zkp-dataset-ledger"
license = "Apache-2.0"
keywords = ["zero-knowledge", "cryptography", "ml", "audit"]
categories = ["cryptography", "science", "development-tools"]

[dependencies]
# Core dependencies for robust functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
hex = "0.4"
sha2 = "0.10"
# Logging and monitoring
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "zkp-ledger"
path = "src/bin/cli_simple.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true
```
