[package]
name = "zkp-dataset-ledger"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Schmidt <daniel@terragon.ai>"]
description = "A zero-knowledge-proof ledger that notarizes every dataset version, transformation, and train/eval split"
repository = "https://github.com/danieleschmidt/zkp-dataset-ledger"
license = "Apache-2.0"
keywords = ["zero-knowledge", "cryptography", "ml", "audit"]
categories = ["cryptography", "science", "development-tools"]

[dependencies]
# Core dependencies for robust functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
hex = "0.4"
sha2 = { version = "0.10", features = ["std"] }
sha3 = "0.10"
blake3 = "1.5"
# ZK and crypto dependencies  
ark-bls12-381 = "0.4"
ark-groth16 = "0.4" 
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
bincode = "2.0"
# Additional math dependencies
libm = "0.2"
# Logging and monitoring
log = "0.4"
env_logger = "0.11"
# Additional dependencies for optimization and concurrency
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.3"
tempfile = "3.8"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
dashmap = "6.0"
parking_lot = "0.12"
num_cpus = "1.16"
rand = "0.8"
rand_distr = "0.4"
regex = "1.10"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bin]]
name = "zkp-ledger"
path = "src/bin/cli_simple.rs"

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "verification"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = true
